--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -2,5 +2,7 @@
     General Styles used on every website (Don't Repeat Yourself)
 */
 body {
-    background-color: #1E2121;
+    background: rgb(21 23 28);
+    /* background-image: linear-gradient(to bottom right, #0F1E54, #242D4E); */
+    background-size: 120%;
 }
