--- a/src/front/js/pages/Display/display.css
+++ b/src/front/js/pages/Display/display.css
@@ -5,12 +5,19 @@
   }
 
 .filterContainer {
-    background-color: #2A3840;
+    background-color: rgba(35, 37, 46, 0.9);
     border-radius: 40px;
-    height: 400px;
+    padding: 15px;
+    color: white;
+    
 }
 
 .scroll {
     max-height: 125px;
     overflow-y: auto;
+}
+
+.card-styling {
+    background-color: rgba(35, 37, 46, 0.9);
+    color: white;
 }
