--- a/src/front/js/pages/Login/login.css
+++ b/src/front/js/pages/Login/login.css
@@ -3,7 +3,7 @@
 */
 
 .loginFormContainer {
-    background: #2A3840;
+    background: rgba(35, 37, 46, 0.9);
     border-radius: 20%;
     margin-top: 75px;
 }
