--- a/src/front/js/pages/Login/login.css
+++ b/src/front/js/pages/Login/login.css
@@ -11,7 +11,8 @@
 .loginInput {
     border: none;
     background: none;
-    border-bottom: 1px solid white;
+    border: 1px solid white;
+    border-radius: 5px;
     color: white;
 }
 
