--- a/src/front/js/pages/Display/SingleDisplay/singledisplay.css
+++ b/src/front/js/pages/Display/SingleDisplay/singledisplay.css
@@ -1,1 +1,6 @@
 .breadcrumb-item+.breadcrumb-item::before{content:var(--bs-breadcrumb-divider,">") !important ;}
+
+.dialogContainer {
+    max-width: 80vw;
+    max-height: 85vh;
+}
