trying to set up a self-paginated system with a custom hook.(useNextGames)

--- a/src/front/js/pages/Login/login.css
+++ b/src/front/js/pages/Login/login.css
@@ -2,10 +2,37 @@
         CSS Strictly For Login Page
 */
 
+@media (max-width: 767px) {
+    .loginFormContainer {
+        display: none;
+    }
+}
+@media (min-width: 768px) {
+    .mobileLoginFormContainer {
+        display: none;
+    }
+}
+
 .loginFormContainer {
     background: rgba(35, 37, 46, 0.9);
     border-radius: 20%;
     margin-top: 75px;
+}
+
+.mobileLoginFormContainer {
+    background: rgba(35,37,46, 0.9);
+    border-radius: 25px;
+    margin-top: 70px;
+    width: 275px;
+    height: 325px;
+}
+
+.mobileLabels {
+    font-size: 22px;
+}
+
+.mobileInputs {
+    border-radius: 10px;
 }
 
 .loginInput {
