big updates (desc for info)
- Added Many-To-Many relationship in "models.py"
- Added Following/Follower Functionality and Backend capabilities
- Added following/follower returns in 'api/getuser' endpoint.
- Added display in "ProfilePage.jsx" for Follower and Following, along with Modal for followers
- Added functionality for searching through your following/followed (WIP)
- Added auto re-login through stored Refresh Token if logged out during session (1hour).

--- a/src/front/js/pages/Profile/ProfilePage.css
+++ b/src/front/js/pages/Profile/ProfilePage.css
@@ -6,3 +6,12 @@
     border-bottom: 1px solid rgba(255,255,255,0.4);
     border-radius: 5px;
   }
+
+  .searchInp {
+    border: none;
+    border-radius: 25px;
+    caret-color: white;
+  }
+  .searchInp:focus-within {
+    outline: 1px solid gray;
+  }
