--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -5,4 +5,6 @@ body {
     background: rgb(21 23 28);
     /* background-image: linear-gradient(to bottom right, #0F1E54, #242D4E); */
     background-size: 120%;
+    min-height: 100vh;
+    padding-bottom: 100px;
 }
